Fix list view link clickability
Today I Learned.  This took far, far too long to track down.

--- a/assets/widgets/ListArticle.less
+++ b/assets/widgets/ListArticle.less
@@ -8,7 +8,6 @@
     display: flex;
     flex-flow: row wrap;
     position: relative;
-    z-index: -1;
     margin: 4px 0;
     padding: 8px 16px 8px 64px;
     .content-colors;
